Stops site name becoming unreadble on hover in dark mode

--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -41,7 +41,7 @@
   &:hover {
     color: $text-color;
 
-    @include set-dark-color((color: $text-color));
+    @include set-dark-color((color: $dark-text-color));
   }
 }
 
